feat: project histories
