# app/project/domain/project_history_entity.go
@@ -1,0 +1,12 @@
+package domain
+
+import "time"
+
+type ProjectHistoryEntity struct {
+	ID            int64
+	HistoryType   string
+	Title         string
+	Description   string
+	AttachmentUrl string
+	CreatedAt     time.Time
+}
