# app/project/dto/list_project_history_res_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+type ProjectHistoryRes struct {
+	HistoryType   string `json:"history_type"`
+	Title         string `json:"title"`
+	Description   string `json:"description"`
+	AttachmentUrl string `json:"attachment_url"`
+	CreatedAt     string `json:"created_at"`
+}
